// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`creates a valid router context > context 1`] = `
{
  "adapter": {
    "onViewSwap": [Function],
    "resolveComponent": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "hooks": {},
  "http": {
    "request": [Function],
  },
  "memo": {},
  "plugins": [],
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "url": "https://localhost/",
  "validation": {},
  "version": "123",
  "view": {
    "component": "my-owo-view",
    "properties": {
      "foo": "bar",
    },
  },
}
`;

exports[`updates the context > base context 1`] = `
{
  "adapter": {
    "onViewSwap": [Function],
    "resolveComponent": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "hooks": {},
  "http": {
    "request": [Function],
  },
  "memo": {},
  "plugins": [],
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "url": "https://localhost/",
  "validation": {},
  "version": "abc123",
  "view": {
    "component": "default.view",
    "properties": {},
  },
}
`;

exports[`updates the context > updated context 1`] = `
{
  "adapter": {
    "onViewSwap": [Function],
    "resolveComponent": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "hooks": {},
  "http": {
    "request": [Function],
  },
  "memo": {},
  "plugins": [],
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "url": "https://localhost/foo/bar",
  "validation": {},
  "version": "new-version-string",
  "view": {
    "component": "default.view",
    "properties": {},
  },
}
`;

exports[`updates the context > updated context with dialog 1`] = `
{
  "adapter": {
    "onViewSwap": [Function],
    "resolveComponent": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "dialog": {
    "baseUrl": "https://base.test",
    "component": "some.dialog",
    "deferred": {},
    "key": "abc",
    "mergeable": [],
    "properties": {
      "foo": "bar",
    },
    "redirectUrl": "https://base.test/dialog",
  },
  "hooks": {},
  "http": {
    "request": [Function],
  },
  "memo": {},
  "plugins": [],
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "url": "https://localhost/foo/bar/dialog",
  "validation": {},
  "version": "new-version-string",
  "view": {
    "component": "default.view",
    "properties": {},
  },
}
`;

exports[`updates the context > updated context with no dialog 1`] = `
{
  "adapter": {
    "onViewSwap": [Function],
    "resolveComponent": [Function],
    "updateRoutingConfiguration": [Function],
  },
  "dialog": undefined,
  "hooks": {},
  "http": {
    "request": [Function],
  },
  "memo": {},
  "plugins": [],
  "responseErrorModals": undefined,
  "routing": undefined,
  "scrollRegions": [],
  "serializer": {
    "serialize": [Function],
    "unserialize": [Function],
  },
  "url": "https://localhost/foo",
  "validation": {},
  "version": "new-version-string",
  "view": {
    "component": "default.view",
    "properties": {},
  },
}
`;
